--- a/module-admin/src/main/resources/templates/layout/main.html
+++ b/module-admin/src/main/resources/templates/layout/main.html
@@ -91,7 +91,7 @@
     </div>
 
 </div>
-<span th:replace="~{layout/jsCommon :: jsCommon}"></span>
+<!--<span th:replace="~{layout/jsCommon :: jsCommon}"></span>-->
 <!-- Required Jquery -->
 <script type="text/javascript" th:src="@{/files/bower_components/jquery-ui/jquery-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/files/bower_components/popper.js/dist/umd/popper.min.js}"></script>
