--- a/module-admin/src/main/resources/static/css/admin.common.css
+++ b/module-admin/src/main/resources/static/css/admin.common.css
@@ -230,6 +230,11 @@ div.dataTables_wrapper div.dataTables_info {
     background-color: #FF8031 !important;
 }
 
+.dataTables_paginate {
+    text-align: center !important;
+    width: 100% !important;
+}
+
 .ck-content {
     border-bottom-left-radius: 10px !important;
     border-bottom-right-radius: 10px !important;
