--- a/module-admin/src/main/resources/templates/resourcesView.html
+++ b/module-admin/src/main/resources/templates/resourcesView.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
@@ -153,14 +151,15 @@
             init: function () {
                 parentNode = null;
                 selectedNode = null;
+                const _this = this;
 
                 $.ajax({
-                    url: '/admin/resourcesWithRecursive',
+                    url: '/admin/resources',
                     type: 'get',
                     async: false
                 }).done(function (response) {
                     response.forEach(function (element, index) {
-                        resourceController.resources[index] = {
+                        _this.resources[index] = {
                             id: element.id,
                             parent: element.parentId ? element.parentId : '#',
                             text: element.name,
@@ -177,23 +176,23 @@
                     alert("자원 목록을 조회하는데 실패하였습니다.");
                 });
 
-                this.renderJsTree();
+                _this.renderJsTree();
             },
 
             renderJsTree: function () {
-                /* 이벤트 목록 조회 URL: https://www.jstree.com/api/#/?q=.jstree%20Event */
-                this.$jstree.jstree({
+                const _this = this;
+
+                _this.$jstree.jstree({
                     "core": {
                         "animation": 50,
                         "strings": {
                             loading: "Loading ..."
-                            , new_node: "새그룹"
                         },
                         "themes": {
                             "responsive": true,
                         },
-                        'data': resourceController.resources,
-                        'check_callback': true
+                        'data': _this.resources,
+                        'check_callback' : true
                     },
                     "types": {
                         "MENU": {
@@ -210,11 +209,16 @@
                                 "separator_after": false,
                                 "label": "하위 등록",
                                 "action": function (obj) {
-                                    $('#resourceForm')[0].reset();
-                                    $('#id').val('');
-                                    $('#type1').prop('checked',true);
-                                    $('#upperId').val(resourceController.selectedNode.original.id);
-                                    $('#upperUrl').val(resourceController.selectedNode.original.url);
+                                    const selectedNode = $.jstree.reference(obj.reference).get_node(obj.reference).original;
+                                    if(selectedNode.type === 'FUNCTION') {
+                                        alert('프로그램 유형이 메뉴인 경우에만 하위 등록이 가능합니다.')
+                                    } else {
+                                        $('#resourceForm')[0].reset();
+                                        $('#id').val('');
+                                        $('#type1').prop('checked',true);
+                                        $('#upperId').val(_this.selectedNode.original.id);
+                                        $('#upperUrl').val(_this.selectedNode.original.url);
+                                    }
                                 }
                             }, "delete": {
                                 "separator_before": false,
@@ -228,10 +232,10 @@
                     },
                     'plugins': ['types', 'dnd', 'contextmenu']
                 }).bind("move_node.jstree", function (event, data) {
-                    const originalParentIdOfSelectedNode = resourceController.$jstree.jstree(true).get_node(data.old_parent).id;
+                    const originalParentIdOfSelectedNode = _this.$jstree.jstree(true).get_node(data.old_parent).id;
                     const originalOrdOfSelectedNode = data.node.original.ord;
-                    const newParentIdOfSelectedNode = resourceController.$jstree.jstree(true).get_node(data.parent).id;
-                    const depthOfNewParentId = resourceController.$jstree.jstree(true).get_node(data.parent).original.depth;
+                    const newParentIdOfSelectedNode = _this.$jstree.jstree(true).get_node(data.parent).id;
+                    const depthOfNewParentId = _this.$jstree.jstree(true).get_node(data.parent).depth;
                     const newOrdOfSelectedNode = data.position + 1;
                     const idOfSelectedNode = data.node.original.id;
 
@@ -244,12 +248,12 @@
                         idOfSelectedNode: idOfSelectedNode
                     }
 
-                    resourceController.moveNode(param);
+                    _this.moveNode(param);
 
                 }).bind("select_node.jstree", function (event, data) {
-                    resourceController.selectedNode = resourceController.$jstree.jstree('get_selected', true)[0];
-                    resourceController.parentNode = resourceController.$jstree.jstree(true).get_node(resourceController.selectedNode.parent);
-                    resourceController.print();
+                    _this.selectedNode = _this.$jstree.jstree('get_selected', true)[0];
+                    _this.parentNode = _this.$jstree.jstree(true).get_node(_this.selectedNode.parent);
+                    _this.print();
                 }).bind("dblclick.jstree", function (event) {
 
                 }).bind("open_node.jstree", function (event, data) {
@@ -277,9 +281,9 @@
                         contentType: 'application/json'
                     }).done(function (response) {
                         alert('자원이 수정되었습니다.');
-                        resourceController.$jstree.jstree().destroy();
-                        resourceController.init();
-                        resourceController.$jstree.jstree(true)._open_to(resourceController.selectedNode.id);
+                        _this.$jstree.jstree().destroy();
+                        _this.init();
+                        _this.$jstree.jstree(true)._open_to(_this.selectedNode.id);
                     }).fail(function (error) {
                         alert('자원을 수정하는데 실패하였습니다.')
                         console.log(JSON.stringify(error));
@@ -301,9 +305,9 @@
                         contentType: 'application/json'
                     }).done(function () {
                         alert('자원이 등록되었습니다.');
-                        resourceController.$jstree.jstree().destroy();
-                        resourceController.init();
-                        resourceController.$jstree.jstree(true)._open_to(resourceController.selectedNode.id);
+                        _this.$jstree.jstree().destroy();
+                        _this.init();
+                        _this.$jstree.jstree(true)._open_to(_this.selectedNode.id);
                     }).fail(function (error) {
                         alert('자원을 등록하는데 실패하였습니다.');
                         console.log(JSON.stringify(error));
