design: 자원관리 화면 수정

--- a/module-admin/src/main/resources/templates/resourcesView.html
+++ b/module-admin/src/main/resources/templates/resourcesView.html
@@ -53,21 +53,21 @@
                                                     <div class="mb-3 form-group row">
                                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperId"><strong>상위자원명</strong></label>
                                                         <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-sm" name="upperId" id="upperId" readonly/>
+                                                            <input type="text" class="form-control form-control-round" name="upperId" id="upperId" readonly/>
                                                         </div>
                                                     </div>
 
                                                     <div class="mb-3 form-group row">
                                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="upperUrl"><strong>상위 자원 URL</strong></label>
                                                         <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-sm" name="upperUrl" id="upperUrl" readonly/>
+                                                            <input type="text" class="form-control form-control-round" name="upperUrl" id="upperUrl" readonly/>
                                                         </div>
                                                     </div>
 
                                                     <div class="mb-3 form-group row">
                                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="httpMethod"><strong>Http Method Type</strong></label>
                                                         <div class="col-sm-12">
-                                                            <select name="httpMethod" id="httpMethod" class="form-select form-select-sm form-control-sm">
+                                                            <select name="httpMethod" id="httpMethod" class="form-select form-control form-control-round">
                                                                 <option value="">- 선택 - </option>
                                                                 <option value="PUT">PUT</option>
                                                                 <option value="GET">GET</option>
@@ -81,14 +81,14 @@
                                                     <div class="mb-3 form-group row">
                                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="name"><strong>자원명</strong></label>
                                                         <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-sm" name="name" id="name"/>
+                                                            <input type="text" class="form-control form-control-round" name="name" id="name"/>
                                                         </div>
                                                     </div>
 
                                                     <div class="mb-3 form-group row">
                                                         <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="url"><strong>URL</strong></label>
                                                         <div class="col-sm-12">
-                                                            <input type="text" class="form-control form-control-sm" name="url" id="url"/>
+                                                            <input type="text" class="form-control form-control-round" name="url" id="url"/>
                                                         </div>
                                                     </div>
 
